packages/ui-library/src/css/layout.scss
/* ... */
.page-return-link {
    position: relative;
    display: inline-block;
    font-size: 14px;
    margin: 0 100% 25px 13px;
    white-space: nowrap;

    &:before {
        content: 'Y';
        position: absolute;
        top: -1px;
        left: -14px;
        font-size: 6px;
        font-family: $icon-font;

        @include rotate(90deg);
    }
}

.page-title {
    font-size: 24px;
    font-family: $font-pn-regular;
    color: $color-slate;
    margin: 0 0 30px;
    word-wrap: break-word;

    .page-subtitle {
        margin: 5px 0 0;
        font-size: 14px;
        display: block;
        color: $color-elephant;
    }
}

.page-section-title {
    margin: 0 0 25px;
    padding: 0 0 5px;
    border-bottom: 1px solid $color-rabbit-fur;
    font-size: 15px;
    line-height: 1em;
    font-family: $font-pn-semibold;
    color: $color-blue-grey;
    text-transform: uppercase;
}

.page-section {
    margin: 0 0 40px 25px;
}

.page-section-title-desc {
    margin: -10px 0 25px 0;

    &.only {
        margin-bottom: 40px;
    }
}

.page-section-content {
    margin: 0 0 40px 25px;
}

.page-section-data-title {
    font-size: 14px;
    text-transform: uppercase;
    color: $color-elephant;
    margin: 0 0 5px;
}

.page-section-data {
    display: table;
    margin: 0 0 30px;

    .data-item {
        display: table-row;

        .data-item-label,
        .data-item-value {
            display: table-cell;
            padding-top: 5px;
            padding-bottom: 5px;
            font-family: $font-pn-regular;
            line-height: 1em;
        }
        .data-item-label {
            font-size: 13px;
            text-transform: uppercase;
            padding-right: 20px;
            color: $color-elephant;

            &:after {
                content: ':';
            }
        }
        .data-item-value {
            font-size: 14px;
            color: $color-midnight;
        }
    }
}

.page-section-data-divider {
    background: none;
    border-style: dotted;
    border-width: 1px 0 0;
    border-color: $color-rabbit-fur;
    margin: -25px 0 5px 0;
}

.page-controls-secondary {
    float: right;
    margin: -4px 0 0 0;

    > * {
        display: inline-block;
        margin: 0 0 0 15px;
    }
    .input-toggle {
        a.toggle {
            margin: 0;
        }
    }
    .details-tooltip {
        z-index: 1;

        button,
        .button,
        input[type=button] {
            margin: 0;
        }
    }
}

.page-controls-primary {
    box-sizing: border-box;
    position: fixed;
    z-index: 1;
    left: $layout-nav-width + 40px;
    right: 40px;
    bottom: 0;
    padding: 20px 0;
    text-align: right;
    background: rgba($color-white, 0.9);
    border-top: 1px solid $color-rabbit-fur;

    @include transition(all 0.2s);

    &.hidden {
        @include transform(translateY(100%));
    }

    @include button-spacing();
}

.content-columns {
    @include flexbox;

    .content-column {
        flex: 1;
        box-sizing: border-box;
        margin: 0 40px 0 0;

        @include flexbox-grow(1);

        &:last-of-type {
            margin: 0;
        }
    }
    &.columns-margin-none,
    &.columns-nopad {  // nopad DEPRICATED
        .content-column {
            margin: 0;
        }
    }
    &.columns-margin-20 {
        .content-column {
            margin: 0 20px 0 0;

            &:last-of-type {
                margin: 0;
            }
        }
    }
    &.columns-width-auto {
        .content-column {
            @include flexbox-grow(0);
        }
    }
}

// flakey but one of only a few options : use with caution
.valign-container {
    display: table !important;
    height: 100%;

    .valign-content {
        display: table-cell !important;
        vertical-align: middle !important;
    }
}


// DEPRECATED OR SITE-SPECIFIC STYLES --------------------------------------------------------------

.inlineForm {
    display: inline-block;
}

.inline-alert {
    position: relative;
    background: #fedba3;
    margin: 30px 0;
    padding: 15px 15px 15px 55px;
    color: rgba(0, 0, 0, 0.6);
    border: 1px solid rgba(0, 0, 0, 0.1);

    &:before {
        content: '!';
        font-family: $icon-font;
        position: absolute;
        left: 20px;
        top: 15px;
        font-size: 20px;
    }
    .title {
        margin: 0 0 5px;
    }
    &.reversed {
        background: transparent;
        border: none;
        color: $color-warning-text;
    }
}

#header {
    .nav {
        position: absolute;
        right: 4px;
        top: 15px;
        font-size: 24px;

        li {
            float: left;

            a {
                display: inline-block;
                vertical-align: middle;
                padding: 6px 20px 3px;
                border-right: 1px solid rgba($color-white, 0.2);

                &:hover {
                    text-decoration: none;
                    color: $color-white;
                }
            }
            &:last-child {
                a {
                    border-right: none;
                    &:hover {
                        text-decoration: none;
                    }
                }
            }
        }
    }
}

.content-col-of-2,
.content-col-of-3,
.content-col-of-4,
.content-col-of-5 {
    float: left;

    .input-row {
        margin-right: 15px;
    }
}

.content-col-of-2 {
    max-width: 50%;

    &.maximize {
        max-width: none;
        width: 50%;
    }
}

.content-col-of-3 {
    max-width: 33.3%;

    &.maximize {
        max-width: none;
        width: 33.3%;
    }
}

.content-col-of-4 {
    max-width: 25%;

    &.maximize {
        max-width: none;
        width: 25%;
    }
}

.content-col-of-5 {
    max-width: 20%;

    &.maximize {
        max-width: none;
        width: 20%;
    }
}
/* ... */

